# xi-editor

rust/core-lib/: BUILD.gn  Cargo.toml
rust/core-lib/src/: editor.rs  lib.rs  tabs.rs
rust/core-lib/src/plugins/: manifest.rs
