import("//build/rust/rust_library.gni")

rust_library("xi_core_lib") {
    deps = [
        "//apps/ledger/services/public:public_rust_library",
        "//lib/fidl/rust/fidl",
        "//rust/magenta-rs:magenta",
        "//rust/magenta-rs/magenta-sys",
        "//rust/mxruntime",
        "//rust/xi-editor/rust/rpc:xi_rpc",
        "//rust/xi-editor/rust/rope:xi_rope",
        "//rust/xi-editor/rust/unicode:xi_unicode",
    ]
}
